tests/checker/fail/concurrent_bare_call.can
main = () -> Unit {
    parallel("a".slowEcho(), "b".slowEcho())
    race("a".slowEcho(), "b".slowEcho()).print()
}
